--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,34 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="92dae4">  <td>24/08/12 10:30:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auto_SecondWays.addProductToCart()[pri:0, instance:com.tests.Auto_SecondWays@72e5a8e]">addProductToCart</td> 
+<tr bgcolor="86bdd6">  <td>24/08/12 11:22:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.tests.EcommTest2@72e5a8e]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
+<tr bgcolor="86bdd6">  <td>24/08/12 11:23:12</td>   <td>27229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.tests.EcommTest2@72e5a8e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
+<tr bgcolor="86bdd6">  <td>24/08/12 11:22:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.tests.EcommTest2@72e5a8e]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
+<tr bgcolor="92dae4">  <td>24/08/12 11:22:03</td>   <td>-41312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommTest2.searchExistingProduct()[pri:2, instance:com.tests.EcommTest2@72e5a8e]">searchExistingProduct</td> 
   <td>main@125130493</td>   <td></td> </tr>
-<tr bgcolor="92dae4">  <td>24/08/12 10:31:25</td>   <td>56484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auto_SecondWays.updateQuantityInCart()[pri:0, instance:com.tests.Auto_SecondWays@72e5a8e]">updateQuantityInCart</td> 
+<tr bgcolor="86bdd6">  <td>24/08/12 11:22:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.tests.EcommTest2@72e5a8e]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
+<tr bgcolor="86bdd6">  <td>24/08/12 11:23:12</td>   <td>27229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.tests.EcommTest2@72e5a8e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
+<tr bgcolor="86bdd6">  <td>24/08/12 11:22:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.tests.EcommTest2@72e5a8e]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
+<tr bgcolor="92dae4">  <td>24/08/12 11:22:31</td>   <td>-14158</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommTest2.updateQuantityInCart()[pri:4, instance:com.tests.EcommTest2@72e5a8e]">updateQuantityInCart</td> 
   <td>main@125130493</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>24/08/12 10:31:38</td>   <td>69242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.tests.Auto_SecondWays@72e5a8e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>24/08/12 10:31:20</td>   <td>51427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.tests.Auto_SecondWays@72e5a8e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
-<tr bgcolor="92dae4">  <td>24/08/12 10:31:16</td>   <td>47406</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auto_SecondWays.searchNonExistingProduct()[pri:0, instance:com.tests.Auto_SecondWays@72e5a8e]">searchNonExistingProduct</td> 
+<tr bgcolor="92dae4">  <td>24/08/12 11:21:54</td>   <td>-51101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommTest2.searchNonExistingProduct()[pri:1, instance:com.tests.EcommTest2@72e5a8e]">searchNonExistingProduct</td> 
   <td>main@125130493</td>   <td></td> </tr>
-<tr bgcolor="92dae4">  <td>24/08/12 10:30:45</td>   <td>16243</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auto_SecondWays.removeProductFromCart()[pri:0, instance:com.tests.Auto_SecondWays@72e5a8e]">removeProductFromCart</td> 
+<tr bgcolor="86bdd6">  <td>24/08/12 11:22:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.tests.EcommTest2@72e5a8e]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
+<tr bgcolor="92dae4">  <td>24/08/12 11:22:53</td>   <td>8611</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommTest2.removeProductFromCart()[pri:5, instance:com.tests.EcommTest2@72e5a8e]">removeProductFromCart</td> 
   <td>main@125130493</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>24/08/12 10:31:38</td>   <td>69242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.tests.Auto_SecondWays@72e5a8e]">&lt;&lt;tearDown</td> 
+<tr bgcolor="86bdd6">  <td>24/08/12 11:23:12</td>   <td>27229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.tests.EcommTest2@72e5a8e]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>24/08/12 10:31:38</td>   <td>69242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.tests.Auto_SecondWays@72e5a8e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
-<tr bgcolor="92dae4">  <td>24/08/12 10:30:59</td>   <td>29924</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Auto_SecondWays.searchExistingProduct()[pri:0, instance:com.tests.Auto_SecondWays@72e5a8e]">searchExistingProduct</td> 
+<tr bgcolor="92dae4">  <td>24/08/12 11:22:16</td>   <td>-28814</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EcommTest2.addProductToCart()[pri:3, instance:com.tests.EcommTest2@72e5a8e]">addProductToCart</td> 
   <td>main@125130493</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>24/08/12 10:31:38</td>   <td>69242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.tests.Auto_SecondWays@72e5a8e]">&lt;&lt;tearDown</td> 
+<tr bgcolor="86bdd6">  <td>24/08/12 11:23:12</td>   <td>27229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.tests.EcommTest2@72e5a8e]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>24/08/12 10:31:38</td>   <td>69242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.tests.Auto_SecondWays@72e5a8e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>24/08/12 10:31:20</td>   <td>51427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.tests.Auto_SecondWays@72e5a8e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>24/08/12 10:31:20</td>   <td>51427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.tests.Auto_SecondWays@72e5a8e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>24/08/12 10:31:20</td>   <td>51427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.tests.Auto_SecondWays@72e5a8e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
-<tr bgcolor="86bdd6">  <td>24/08/12 10:31:20</td>   <td>51427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.tests.Auto_SecondWays@72e5a8e]">&gt;&gt;setup</td> 
+<tr bgcolor="86bdd6">  <td>24/08/12 11:23:12</td>   <td>27229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.tests.EcommTest2@72e5a8e]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@125130493</td>   <td></td> </tr>
 </table>
